[package]
name = "lark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for editor
ropey = "1.5"
unicode-segmentation = "1.10"
unicode-width = "0.1"
unicode-general-category = "0.5"
tree-sitter = "0.20"

# for server
tokio = { version = "1", features = ["full"] }
bytes = "1"

# for term
alacritty_terminal = "0.16"

# common
log = "0.4"
smallvec = "1.9"
smartstring = "1.0.1"